# sat-playground

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  draw_graph.py  input.dimacs  main.py  notes.md  pyproject.toml  todo
clsat/: __init__.py  clsat.pyi
docs/: readme.md
src/: lib.rs
src/dimacs/: mod.rs
src/drat/: mod.rs
src/encodings/: csp.rs  mod.rs
src/formula/: assignment.rs  clause.rs  extension.rs  literal.rs  mod.rs  variable.rs  vsids.rs
src/heuristics/: mod.rs  random.rs  vsids.rs
src/history/: clause_minimization.rs  conflict_analysis.rs  conflict_graph.rs  decision_level.rs  dip.rs  implication_level.rs  mod.rs  uip.rs
src/implication_graph/: mod.rs
src/preprocess/: bve.rs  mod.rs
src/problems/: csp.rs  mod.rs
src/process/: bva.rs  bve.rs  mod.rs  subsumption.rs
src/python/: interrupts.rs  mod.rs  sat.rs  stats.rs
src/solver/: cdcl.rs  dpll.rs  mod.rs
src/two_watched/: mod.rs
