[package]
name = "sat-playground"
version = "0.1.0"
edition = "2024"

[lib]
name = "clsat"
crate-type = ["cdylib","rlib"]

[dependencies]
ctrlc = "3.5.2"
fastbit = "0.11.1"
indexmap = "2.13.0"
pyo3 = {version =  "0.28.3", features = ["macros", "experimental-inspect"]}
ultragraph = "0.8.15"

[build-dependencies]
pyo3-build-config = "0.28.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
